syntax = "proto3";

package intrvproto;
option php_namespace = "App\\Protobuf\\Generated";
option php_metadata_namespace = "App\\Protobuf\\Generated\\GPBMetadata";

import "user.proto";

service UserService {
  rpc GetUserById(GetUserRequest) returns (UserResponse) {}
  rpc GetUserDetails(GetUserRequest) returns (UserDetails) {}
  rpc VerifyUser(VerifyUserRequest) returns (VerificationResponse) {}
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {}
}
